fix: add z-index to filter popover

--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -42,6 +42,8 @@
 
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
+	position: relative;
+	z-index: 3;
 }
 
 .locations:hover .popover {
